# mcp-sca-vms

./: README.md  dashboard.py  dashboard_mcp_server.py  pyproject.toml  requirements.txt  server.py  syft_mcp_server.py  vuln_manage_mcp_server.py
src/: git_clone_mcp_server.py  grype_mcp_server.py
src/mcp_sca_vms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mcpserver/: __main__.py  core.py  dashboard.py  dashboard_mcp_server.py  git_clone.py  git_clone_mcp_server.py  grype.py  grype_mcp_server.py  syft.py  syft_mcp_server.py  vuln.py  vuln_manage_mcp_server.py
